JumpScript/tests/baselines/reference/classExtendingPrimitive2.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.jump(3,19): error TS1109: Expression expected.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.jump (1 errors) ====
    // classes cannot extend primitives
    
    class C4a extends void {}
                      ~~~~
!!! error TS1109: Expression expected.
    class C5a extends null { }